# Licenta-UBB

./: README.md
Sem2/OOP/Laborator6_7/Magazin/: CMakeLists.txt  GUImagazin.cpp  GUImagazin.h  main.cpp  observer.h  produse.txt
Sem2/OOP/Laborator6_7/Magazin/Bussines/: service.cpp  service.h
Sem2/OOP/Laborator6_7/Magazin/Domeniu/: cos_produse.cpp  cos_produse.h  lista.h  produs.cpp  produs.h  validator.cpp  validator.h
Sem2/OOP/Laborator6_7/Magazin/Infrastructura/: exporta.cpp  exporta.h  file_repository.cpp  file_repository.h  repository.cpp  repository.h  undo.h
Sem2/OOP/Laborator6_7/Magazin/Prezentare/: ui_magazin.cpp  ui_magazin.h
Sem2/OOP/RaduAndreiIoan/examen/: CMakeLists.txt  Melodie.cpp  Melodie.h  MelodieController.cpp  MelodieController.h  MelodieGui.cpp  MelodieGui.h  MelodieRepo.cpp  MelodieRepo.h  MelodieValid.cpp  MelodieValid.h  Observer.h  main.cpp  melodii.txt  test.txt
Sem2/SDA/Laborator3/Lista_ordonata_cu_indici/: CMakeLists.txt  app.cpp
Sem2/SDA/Laborator3/Lista_ordonata_cu_indici/Fisiere_cpp/: TestExtins.cpp  TestScurt.cpp  iterator.cpp  lista_ordonata.cpp
Sem2/SDA/Laborator3/Lista_ordonata_cu_indici/Header/: iterator.h  lista_ordonata.h
Sem2/SDA/Laborator4/Dictionar_LSI_cu_perechi/: CMakeLists.txt
Sem2/SDA/Laborator4/Dictionar_LSI_cu_perechi/Fisiere_CPP/: dictionar.cpp  iterator_dictionar.cpp  main.cpp  test_extins.cpp  test_scurt.cpp
Sem2/SDA/Laborator4/Dictionar_LSI_cu_perechi/Header/: dictionar.h  iterator_dictionar.h
Sem3/MAP/Exam/: build.gradle
Sem3/PLF/Swi/: adauga_sfarsit.pl  apartenenta_lista.pl  factorial.pl  factorial.pl~  factorial2.pl  factorial2.pl~
Sem4/Inteligenta artificiala/Lab01/: prb01.py  prb02.py  prb03.py  prb04.py  prb05.py  prb06.py  prb07.py  prb08.py  prb09.py  prb10.py
Sem4/Inteligenta artificiala/Lab03/: alg_evo.txt
Sem4/MPP/Diagrama/: diagrama.mdj
Sem4/MPP/ExamMPP/: database.db  settings.gradle
Sem4/MPP/Joc/: joc.db  settings.gradle
Sem4/MPP/Lab04/: RepairShopDB.db
Sem4/SGBD/Lab03/: RaduAndreiIoanLab3_TEMA_NOUA.sql
Sem4/SGBD/Lab04/: RaduAndreiIoan1.sql  RaduAndreiIoan2.sql
Sem5/AVDP/Lab01/: muleCropped.ppm
Sem5/LFTC/: notite.md
Sem5/LFTC/Lab01/: atomCode.txt  mlp.txt  suma.txt
Sem5/LFTC/Lab02/: inClass.txt
Sem5/LFTC/Lab03/: lex.l  lex.yy.c
Sem5/LFTC/Lab04/: lex.yy.c  mlp.txt  syntax.l  syntax.tab.c  syntax.tab.h  syntax.y
Sem5/LFTC/Lab06/: Makefile  bison.output  bison.tab.c  bison.tab.h  bison.y  lex.l  lex.yy.c  mlp.txt  prb1.cpp  prb2.cpp  program.asm  program.lst
Sem5/LFTC/ok/: cfg_reduction.txt  cfg_to_cnf.txt  cfg_to_gnf.txt  ex_sem_3_eng.txt  ex_sem_4_eng.txt  ex_sem_5-7_eng.txt  sem4.txt
Sem5/PPD/Examen/: condica.txt
Sem5/PPD/Lab03/: CMakeLists.txt  main.cpp  outC.csv
Sem5/PPD/Lab04/: CMakeLists.txt  main.cpp  main2.cpp
Sem5/PPD/Lab12/: CMakeLists.txt  main.cpp
Sem5/PPD/Teme/Lab03/: CMakeLists.txt  PDD_doc.docx  main_mpi1.cpp  main_mpi2.cpp  main_seq.cpp  ok.cpp  prb1.cpp
Sem5/PPD/Teme/Lab03/data/: number1Normal.txt  number2Normal.txt  rulari.txt
Sem5/PPD/Test/: Test.rar
Sem5/ProiectColectiv/University-Deadline-Tracker/: UniversityDeadlineTracker.sln  UpgradeLog.htm
Sem5/VR/ray-tracer-andrei1904/: RayTracer.cs  Sphere.cs
Sem6/CalculNumeric/Lab02/: cos_taylor.m  cos_taylor_red.m  myeps.m  myrealmax.m  myrealmin.m  sin_taylor_red.m
Sem6/CalculNumeric/Lab03/: ex1.mlx  ex2.mlx  ex3.mlx
Sem6/CalculNumeric/Lab04/: backwardSubs.mlx  choleskySolution.mlx  eliminareGaussiana.mlx  forwardSubs.mlx  lupDecomp.mlx  prez.mlx
Sem6/GraficaPeCalculator/exemplu/: CMakeLists.txt  main.cpp  model.h  obiect.cpp  obiect.h
(+1190 files in other folders)
